--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,5 +16,8 @@
     <div class='container'>
       <%= yield %>
     </div>
+
   </body>
+    <hr> <%# ----THIS FOR DEBUGGING---- %>
+    <%= debug(params) if Rails.env.development? %>
 </html>
