--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -1,3 +1,10 @@
+- if @post.errors.any?
+  .alert.alert-danger
+    h5= t('common.errors')
+    ul
+      - @post.errors.full_messages.each do |message|
+        li= message
+
 = simple_form_for(@post) do |f|
   = f.error_notification
   = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
@@ -8,4 +15,4 @@
     = f.input :body
 
   .form-actions
-    = f.button :submit
+    = f.button :submit, class:"btn btn-primary"
