--- a/app/views/layouts/_nav.html.slim
+++ b/app/views/layouts/_nav.html.slim
@@ -7,7 +7,7 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
       li.nav-item
         = link_to 'Posts', posts_path, class: "nav-link"
       li.nav-item
-        a.nav-link href="#"  Features
+        = link_to 'New', new_post_path, class: "nav-link"
       li.nav-item
         a.nav-link href="#"  Pricing
       li.nav-item
