--- a/app/views/layouts/_nav1.html.slim
+++ b/app/views/layouts/_nav1.html.slim
@@ -7,16 +7,18 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
       li.nav-item
         = link_to 'Posts', posts_path, class: "nav-link"
       li.nav-item
-        = link_to 'New', new_post_path, class: "nav-link"
-      li.nav-item
-        a.nav-link href="#"  Pricing
-      li.nav-item
         a.nav-link href="#"  About
+      - if user_signed_in?
+        li
+        li.nav-item
+          = link_to 'New', new_post_path, class: "nav-link"
+        li.nav-item
+          a.nav-link href="#"  Pricing
+      = link_to 'Logout', destroy_user_session_path, method: :delete
+      - else
+        li= link_to 'Login', new_user_session_path, class: 'btn btn-link'
+        li= link_to 'Sing Up', new_user_registration_path, class: 'btn btn-outline-primary'
     form.form-inline.my-2.my-lg-0
       input.form-control.mr-sm-2 placeholder="Search" type="text" /
       button.btn.btn-secondary.my-2.my-sm-0 type="submit"  Search
-    - if user_signed_in?
-      = link_to 'Logout', destroy_user_session_path, method: :delete, class: 'btn btn-link'
-    - else
-      = link_to 'Login', new_user_session_path, class: 'btn btn-link'
-      = link_to 'Sign up', new_user_registration_path, class: 'btn btn-outline-primary'
+        
