--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
   
   <body>
     <%= render 'layouts/nav' %>
+    <%= render "layouts/messages"%>
     <div class='container'>
       <%= yield %>
     </div>
