--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -7,6 +7,9 @@
   <%= f.full_error :reset_password_token %>
 
   <div class="form-inputs">
+    <%= f.input :username,
+                required: false,
+                input_html: { autocomplete: "username"} %>
     <%= f.input :password,
                 label: "New password",
                 required: true,
